--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,7 @@
     android:id="@+id/drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.nick.cpiherdemo.MainActivity"
-    >
+    tools:context="com.nick.cpiherdemo.MainActivity">
 
     <FrameLayout
         android:id="@+id/container"
